--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html> 
     <head><title>Minha primeira página</title></head>
         <body>
-            <h1>Teste de site</h1>
-          <img src="https://i.imgur.com/EjJtQsk.jpg">   
+            <h1>Web Design</h1>
+          <img src="https://i.imgur.com/dV302Mc.jpg">   
         </body>
 </html>
